--- a/ProjectLogin/style.css
+++ b/ProjectLogin/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -7,7 +6,8 @@
 
 body {
     font-family: Arial;
-    background-color: #0072B5;
+    background-color: #86BBD8; /* Background color: Carolina Blue (#86BBD8) */
+    animation: fadeIn 1.5s ease-in-out;
 }
 
 .container {
@@ -15,19 +15,35 @@ body {
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: #33658A; /* Updated header background color to Lapis Lazuli (#33658A) */
+    color: white;
     border-radius: 5px;
-     text-align: center;
+    text-align: center;
     position: absolute; 
     top: 50%; 
     left: 50%; 
     transform: translate(-50%, -50%); 
 }
-
-img{
-  max-width: 100px;
-  margin-right: 10px;
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-30px);
+    }
+    60% {
+        transform: translateY(-15px);
+    }
 }
+
+
+
+img {
+    max-width: 100px;
+    margin-right: 10px;
+    /* animation: bounce 2s infinite; */
+}
+
 form {
     text-align: center;
 }
@@ -53,20 +69,23 @@ input[type="password"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #2F4858; /* Input border color: Charcoal (#2F4858) */
     border-radius: 3px;
 }
 
 button {
     width: 100%;
     padding: 10px;
-    background-color: #007BFF;
+    margin-bottom: 10px; /* Add margin to separate buttons */
+    background-color: #F6AE20; /* Button background color: Hunyadi Yellow (#F6AE20) */
     color: #fff;
     border: none;
     border-radius: 3px;
     cursor: pointer;
+  transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #F26419; /* Button hover background color: Orange (#F26419) */
+     transform: scale(1.05);
 }
